<resources>
    <string name="app_name">Rotas</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="location_permission_denied">Permissão negada!</string>
    <string name="permission_required_toast">A permissão é necessária!</string>
    <string name="permission_rationale_location">Acesso ao serviço de localização é necessário</string>

    <string name="routing_started">Cálculo de rotas iniciado!</string>
    <string name="routing_ended">Rota finalizada!</string>
    <string name="menuGeovane">Geovane F. S. Santos</string>
    <string name="menuLuigi">Luigi D. C. Soares</string>
    <string name="home">Home</string>
    <string name="foto">Foto</string>
    <string name="galeria">Galeria</string>
    <string name="rotas">Rotas</string>
    <string name="ferramentas">Ferramentas</string>
    <string name="comunica_o">Comunicação</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="enviar">Enviar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
